release 1.14
- Fixed issue JERSEY-1336
  http://java.net/jira/browse/JERSEY-1336
  WADL: Matrix params were generated in "request" element, which violates WADL spec; moved
  to resource where it should be.
- Fixed issue JERSEY-1350
  http://java.net/jira/browse/JERSEY-1350
  Memory leak in OAuth NonceManager
- Fixed issue JERSEY-1341
  http://java.net/jira/browse/JERSEY-1341
  UriBuilderImpl is now adding "=" after the query parameter name even if the value is empty.
- Fixed issue JERSEY-1293
  http://java.net/jira/browse/JERSEY-1293
  ApacheHttpClient4 proxy uri was not used when credentials were not specified.
- Fixed issue JERSEY-1230
  http://java.net/jira/browse/JERSEY-1230
  Added property to WadlGeneratorGrammarsSupport which controls whether Jersey generated
  grammars should be used when user explicitly sets its own grammar.
- Fixed issue 677
  http://java.net/jira/browse/JERSEY-677
  OSGi Manifest imports incomplete in jersey-spring
- Fixed issue 1259
  http://java.net/jira/browse/JERSEY-1259
  Array out of bounds error when you specify an empty list of @Produces annotation

release 1.13 (07-2012)
- Fixed regression in EJB dispatching. Original GlassFish issue 16199
  http://java.net/jira/browse/GLASSFISH-16199
  IllegalArgumentException: object is not an instance of declaring class - on a REST / EJB Service
  This was broken again after Servlet stuff was separated out from the jersey-server module
- Fixed issue 1225
  http://java.net/jira/browse/JERSEY-1225
  Javadoc for JerseyTest is out of date
- Fixed issue 1124
  http://java.net/jira/browse/JERSEY-1124
  ServiceFinder not returning services in META-INF/services
- Fixed issue 1228
  http://java.net/jira/browse/JERSEY-1228
  Add Vary header in GZIPContentEncodingFilter, other improvements wrt. GZIP encoding vs. ETags
- Fixed issue 1220
  http://java.net/jira/browse/JERSEY-1220
  Improved string to object conversion for request parameters.
- Fixed issue 1165
  http://java.net/jira/browse/JERSEY-1165